{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 25,
  "lineage": "ed0b7719-2fe1-550b-86a3-881041391d14",
  "resources": [
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f60ebc551a693514",
            "arn": "arn:aws:ec2:ap-southeast-3:636768524979:instance/i-0728a94f5e873b7d0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0728a94f5e873b7d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Manoj-Ansible-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03b0a9793e0d0ff58"
              }
            ],
            "primary_network_interface_id": "eni-03b0a9793e0d0ff58",
            "private_dns": "ip-10-0-11-90.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.90",
            "public_dns": "ec2-108-136-223-254.ap-southeast-3.compute.amazonaws.com",
            "public_ip": "108.136.223.254",
            "region": "ap-southeast-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04562f14242317c8b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd74873ec8050c4a",
            "tags": {
              "Environment": "Dev",
              "Name": "Bastion-Host",
              "Owner": "Manoj",
              "Project": "univ-app"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "Bastion-Host",
              "Owner": "Manoj",
              "Project": "univ-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a3b34d2a1a5cd2d6"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "i-0728a94f5e873b7d0",
            "region": "ap-southeast-3"
          },
          "dependencies": [
            "module.ec2_instances.aws_security_group.ec2_sg",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_subnet.public_subnet_2",
            "module.network.aws_subnet.public_subnet_3",
            "module.network.aws_subnet.public_subnet_4",
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c3ce9247ac7f2bc7",
            "arn": "arn:aws:ec2:ap-southeast-3:636768524979:instance/i-088c8566a9d87af6e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-088c8566a9d87af6e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "Manoj-Ansible-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03293465232ca2782"
              }
            ],
            "primary_network_interface_id": "eni-03293465232ca2782",
            "private_dns": "ip-10-0-12-178.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.178",
            "public_dns": "ec2-43-218-133-178.ap-southeast-3.compute.amazonaws.com",
            "public_ip": "43.218.133.178",
            "region": "ap-southeast-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b87f0ca526e51293",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b0c97900b8e7e94d",
            "tags": {
              "Environment": "Dev",
              "Name": "Jenkins-Server",
              "Owner": "Manoj",
              "Project": "univ-app"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "Jenkins-Server",
              "Owner": "Manoj",
              "Project": "univ-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a3b34d2a1a5cd2d6"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "i-088c8566a9d87af6e",
            "region": "ap-southeast-3"
          },
          "dependencies": [
            "module.ec2_instances.aws_security_group.ec2_sg",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_subnet.public_subnet_2",
            "module.network.aws_subnet.public_subnet_3",
            "module.network.aws_subnet.public_subnet_4",
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c3ce9247ac7f2bc7",
            "arn": "arn:aws:ec2:ap-southeast-3:636768524979:instance/i-01e07ddf40234aa62",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01e07ddf40234aa62",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "Manoj-Ansible-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0421eaa541643ab22"
              }
            ],
            "primary_network_interface_id": "eni-0421eaa541643ab22",
            "private_dns": "ip-10-0-13-214.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.13.214",
            "public_dns": "ec2-43-218-88-250.ap-southeast-3.compute.amazonaws.com",
            "public_ip": "43.218.88.250",
            "region": "ap-southeast-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b478675360b6b836",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd0ea878204ccaa5",
            "tags": {
              "Environment": "Dev",
              "Name": "SonarQube-Server",
              "Owner": "Manoj",
              "Project": "univ-app"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "SonarQube-Server",
              "Owner": "Manoj",
              "Project": "univ-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a3b34d2a1a5cd2d6"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "i-01e07ddf40234aa62",
            "region": "ap-southeast-3"
          },
          "dependencies": [
            "module.ec2_instances.aws_security_group.ec2_sg",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_subnet.public_subnet_2",
            "module.network.aws_subnet.public_subnet_3",
            "module.network.aws_subnet.public_subnet_4",
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:636768524979:security-group/sg-0a3b34d2a1a5cd2d6",
            "description": "Allow SSH, Jenkins, and SonarQube access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3b34d2a1a5cd2d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SonarQube",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "ec2-instance-sg",
            "name_prefix": "",
            "owner_id": "636768524979",
            "region": "ap-southeast-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "EC2-SecurityGroup",
              "Owner": "Manoj",
              "Project": "univ-app"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "EC2-SecurityGroup",
              "Owner": "Manoj",
              "Project": "univ-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f7f088f055b0c44"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "sg-0a3b34d2a1a5cd2d6",
            "region": "ap-southeast-3"
          },
          "dependencies": [
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:636768524979:internet-gateway/igw-03cf3fdf7f5c392c7",
            "id": "igw-03cf3fdf7f5c392c7",
            "owner_id": "636768524979",
            "region": "ap-southeast-3",
            "tags": {
              "Environment": "dev",
              "Name": "univ-app-igw",
              "Project": "univer-app"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "univ-app-igw",
              "Project": "univer-app"
            },
            "vpc_id": "vpc-06f7f088f055b0c44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03cf3fdf7f5c392c7",
            "id": "r-rtb-0f4e881dc9889d0701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-3",
            "route_table_id": "rtb-0f4e881dc9889d070",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-3",
            "route_table_id": "rtb-0f4e881dc9889d070"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.project_igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:636768524979:route-table/rtb-0f4e881dc9889d070",
            "id": "rtb-0f4e881dc9889d070",
            "owner_id": "636768524979",
            "propagating_vgws": [],
            "region": "ap-southeast-3",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "univ-app-public-rt",
              "Project": "univer-app"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "univ-app-public-rt",
              "Project": "univer-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f7f088f055b0c44"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "rtb-0f4e881dc9889d070",
            "region": "ap-southeast-3"
          },
          "dependencies": [
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a530e255cf4a939f",
            "region": "ap-southeast-3",
            "route_table_id": "rtb-0f4e881dc9889d070",
            "subnet_id": "subnet-0fd74873ec8050c4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073b8c596180bef07",
            "region": "ap-southeast-3",
            "route_table_id": "rtb-0f4e881dc9889d070",
            "subnet_id": "subnet-0b0c97900b8e7e94d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnet_2",
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071478a348e074527",
            "region": "ap-southeast-3",
            "route_table_id": "rtb-0f4e881dc9889d070",
            "subnet_id": "subnet-0cd0ea878204ccaa5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnet_3",
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09547dce21fecd961",
            "region": "ap-southeast-3",
            "route_table_id": "rtb-0f4e881dc9889d070",
            "subnet_id": "subnet-0458684bef7fd37f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnet_4",
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:636768524979:subnet/subnet-0fd74873ec8050c4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3a",
            "availability_zone_id": "apse3-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd74873ec8050c4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636768524979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-3",
            "tags": {
              "Environment": "dev",
              "Name": "univ-app-public-subnet-1",
              "Project": "univer-app"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "univ-app-public-subnet-1",
              "Project": "univer-app"
            },
            "vpc_id": "vpc-06f7f088f055b0c44"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "subnet-0fd74873ec8050c4a",
            "region": "ap-southeast-3"
          },
          "dependencies": [
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:636768524979:subnet/subnet-0b0c97900b8e7e94d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3a",
            "availability_zone_id": "apse3-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0c97900b8e7e94d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636768524979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-3",
            "tags": {
              "Environment": "dev",
              "Name": "univ-app-public-subnet-2",
              "Project": "univer-app"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "univ-app-public-subnet-2",
              "Project": "univer-app"
            },
            "vpc_id": "vpc-06f7f088f055b0c44"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "subnet-0b0c97900b8e7e94d",
            "region": "ap-southeast-3"
          },
          "dependencies": [
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:636768524979:subnet/subnet-0cd0ea878204ccaa5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3b",
            "availability_zone_id": "apse3-az2",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd0ea878204ccaa5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636768524979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-3",
            "tags": {
              "Environment": "dev",
              "Name": "univ-app-public-subnet-3",
              "Project": "univer-app"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "univ-app-public-subnet-3",
              "Project": "univer-app"
            },
            "vpc_id": "vpc-06f7f088f055b0c44"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "subnet-0cd0ea878204ccaa5",
            "region": "ap-southeast-3"
          },
          "dependencies": [
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:636768524979:subnet/subnet-0458684bef7fd37f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3b",
            "availability_zone_id": "apse3-az2",
            "cidr_block": "10.0.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0458684bef7fd37f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636768524979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-3",
            "tags": {
              "Environment": "dev",
              "Name": "univ-app-public-subnet-4",
              "Project": "univer-app"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "univ-app-public-subnet-4",
              "Project": "univer-app"
            },
            "vpc_id": "vpc-06f7f088f055b0c44"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "subnet-0458684bef7fd37f3",
            "region": "ap-southeast-3"
          },
          "dependencies": [
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:636768524979:vpc/vpc-06f7f088f055b0c44",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00710525ed89cd7d1",
            "default_route_table_id": "rtb-0ba6fb83316258553",
            "default_security_group_id": "sg-0f7f14bf4308fdd75",
            "dhcp_options_id": "dopt-096ff6808126d7350",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06f7f088f055b0c44",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba6fb83316258553",
            "owner_id": "636768524979",
            "region": "ap-southeast-3",
            "tags": {
              "Environment": "dev",
              "Name": "univ-app-vpc",
              "Project": "univer-app"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "univ-app-vpc",
              "Project": "univer-app"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}